# fastapi-todo-app

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 4da299db8e24_add_todo_and_user_tables.py  54b99ca8950e_create_table_todo_user.py  79dc06ea2fa8_add_username_in_user_table.py  b09a1f093a66_add_todo_and_user_tables.py
app/: dependencies.py  main.py
app/core/: security.py
app/crud/: todo.py  user.py
app/models/: todo.py  user.py
app/routers/: auth.py  todo.py  user.py
app/schemas/: todo.py  user.py
